# mental_health_chatbot

./: .gitignore  An_Jian_with_generated_data_gretel_ml_exercise.ipynb  Deepseek_R1_distilled_Qwen_7B_SFT.ipynb  Generate_Gretel.ipynb  Json_conv.ipynb  README.md  Unsloth_DeepSeek_R1_Distill_Qwen_7B.ipynb  test_llama3_2_mental_health.ipynb
.k8s/base/: deployment-backend.yaml  deployment-frontend.yaml  deployment-redis.yaml  ingress.yaml  kustomization.yaml  service-backend.yaml  service-frontend.yaml  service-redis.yaml
.k8s/overlays/dev/: .env.production  deployment-frontend-patch.yaml  deployment-patch.yaml  exaple.env.dev.backend  kustomization.yaml  namespace.yaml  service-backend-patch.yaml  service-frontend-patch.yaml
.k8s/overlays/dns_prod/: README.MD  backend-destination-rule.yaml  deployment-patch.yaml  kustomization.yaml  my-service-account.yaml  namespace.yaml  virtual-service.yaml
.k8s/overlays/prod/: gateway-frontend.yaml  kustomization.yaml  virtual-service.yaml
EDA/: EDA.Rmd  EDA_processing.R
data/RAG_items/: capstone_initial.drawio  pdfs_to_ingest.txt
data/RAG_items/2025_02_14_text/: consumer_finance_article-item.txt  hbr_article-item.txt  indeed_article-item.txt  vox_article-post-grad-item.txt
data/RAG_items/archived/: FamilyandCultureAssessment.docx  MIT - Using the STAR method for your next behavioral interview.docx  UPenn - Financial Wellness.docx  Vox - The skills you should know before moving out on your own.docx  careereducation_article - Informational Interviewing is Key to Your Job Search.docx  hbr - What’s the Right Way to Find a Mentor_.docx  linkedin_article - Internship Search Tips.docx  princeton_article-item - Finding Your Fit_ A Self-Assessment.docx  yaledailynews_article - Embrace failure.docx  (+1 more)
data_processing/: esconv_data_processing.ipynb
genzen-backend/: .dockerignore  Dockerfile  README.md  example.env  langgraph.json  package-lock.json  pendulum-3.0.0-cp311-cp311-macosx_10_12_x86_64.whl  pyproject.toml  time_machine-2.16.0-cp311-cp311-macosx_10_9_x86_64.whl
genzen-backend/.k8s/base/: deployment-backend.yaml  kustomization.yaml  service-backend.yaml  service-redis.yaml
genzen-backend/.k8s/overlays/dev/: kustomization.yaml  namespace.yaml
genzen-backend/src/: main.py  test_ping_inference.py
genzen-backend/src/agents/: agent.py  classification_tools.py  pii_masker.py  rag_hybrid_search.py  requirements.txt  tools.py
genzen-backend/src/agents_archive/: chunks_embedding_upload.py  chunks_s3_download.py  chunks_s3_upload.py  rag.py
genzen-backend/src/connections/: database_creation.py  db.py  db_with_sqlmodel.py  lifespan.py  llm_client.py  redis_cache.py
genzen-backend/src/models/: authentication.py  db_models.py  models.py  pydantic_schemas.py  schemas.py
genzen-backend/src/routers/: auth.py  base.py  chat.py  resources.py
genzen-backend/src/test_agent/: single_agent.py  tester_agent.py  tools.py
genzen-backend/src/utils/: auth_utils.py  aws_clients.py  config_setting.py  memory_utils.py
genzen-backend/tests/: conftest.py  test_agent_chat.py  test_memory.py
genzen-frontend/: .dockerignore  .env.example  Dockerfile  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.js
genzen-frontend/src/: middleware.ts
infrastructure/: README.md  eksctl-cluster-config.yaml  main.tf  run_me_before_eksctl.sh  variables.tf
notebooks/: Json_conv.ipynb  capstone_RAG_setup.ipynb  classification_model_deployment.ipynb  deepseek_evaluation.ipynb  test_Mistral_7b_finetuned_v2.ipynb
pictures/: pictures.txt
suicide_depression/: 1_suicide_model_training.ipynb  2a_suicide_evaluation_and_tfidf.ipynb  2b_ensembling_boosted_trees.ipynb  3_depression_severity_training.ipynb
(+101 files in other folders)
