[project]
name = "src"
version = "0.1.0"
description = "GenZen Backend - A Chatbot for Mental Health"
authors = [
    {name = "Lit Phansiri",email = "lphansiri@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "fastapi[standard] (>=0.115.8,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "langchain-core (>=0.3.40,<0.4.0)",
    "langchain-openai (>=0.3.7,<0.4.0)",
    "langchain-postgres (>=0.0.13,<0.0.14)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "fastapi-cache2[redis] (==0.1.9)",
    "psycopg-binary (>=3.2.5,<4.0.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "jwt (>=1.3.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
