[project]
name = "src"
version = "0.1.0"
description = "GenZen Backend - A Chatbot for Mental Health"
authors = [
    {name = "Lit Phansiri",email = "lphansiri@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "fastapi[standard] (>=0.115.8,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "langchain-core (>=0.3.40,<0.4.0)",
    "langchain-openai (>=0.3.7,<0.4.0)",
    "langchain-postgres (>=0.0.13,<0.0.14)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "fastapi-cache2[redis] (==0.1.9)",
    "passlib (>=1.7.4,<2.0.0)",
    "bcrypt (>=4.3.0,<5.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "sqlmodel (>=0.0.23,<0.0.24)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "greenlet (>=3.1.1,<4.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "langgraph (>=0.3.5,<0.4.0)",
    "boto3 (>=1.37.10,<2.0.0)",
    "langchain-community (>=0.3.19,<0.4.0)",
    "psycopg-pool (>=3.2.6,<4.0.0)",
    "langgraph-checkpoint-postgres (>=2.0.16,<3.0.0)",
    "psycopg-binary (>=3.2.6,<4.0.0)",
    "langgraph-checkpoint-sqlite (>=2.0.6,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
